dataset1235/2025-2/610742602/users/1980422981/executions/677928262_1462915504.log
== SUBMISSION (2025-08-28 20:49:08)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:49:07)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:54:24)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2* x *h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:54:21)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2* x *h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:54:22)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2* x *h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:49:13)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:48:26)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimeno do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:54:00)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:53:27)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:55:24)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2 * x * h
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o comprimento do lado do seu pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o comprimento do lado do seu pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o comprimento do lado do seu pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o comprimento do lado do seu pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o comprimento do lado do seu pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o comprimento do lado do seu pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:54:36)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2 * x * h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:54:37)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2 * x * h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:48:14)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimeno do lado do seu pentagono: "))
h=x/(2*z)
a=5/2*x*h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:54:35)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2 * x * h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:54:38)
-- CODE: 
from math import *
import math
z=math.tan(pi/5)
# faça seu código aqui!
x=float(input("digite o comprimento do lado do seu pentagono: "))
h=x/(2*z)
a=5/2 * x * h
print(rund(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(rund(a,2))
          ^^^^
NameError: name 'rund' is not defined. Did you mean: 'trunc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
